--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     >
   </head>
   <body>
-    <div class="aaa">
+    <div class="eisenhower-matrix">
       <img src="./eisenhower-matrix.jpg">
       <a 
-        class="more-inf" 
+        class="more-info" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
       >
         Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="task-list-container">
       <p id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
