refactor: shorten class names for conciseness according to rule 3.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     >
   </head>
   <body>
-    <div class="eisenhower-matrix">
+    <div class="matrix">
       <img src="./eisenhower-matrix.jpg">
       <a 
-        class="more-info" 
+        class="info-link" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
       >
         Want more details?
       </a>
     </div>
-    <div class="task-list-container">
-      <p id="topSectionForAddingElementToList">
+    <div class="task-list">
+      <p id="task-input-section">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="task-input-row">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
