--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       charset="utf-8"
     >
   </head>
-  <body>
+  <body class="page">
     <div class="matrix">
       <img src="./eisenhower-matrix.jpg">
       <a 
