--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="page">
     <div class="matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix diagram showing task prioritization">
       <a 
         class="info-link" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -40,7 +40,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Delete task icon">
           </button>
         </li>
         <li class="edit-mode">
@@ -49,7 +49,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Delete task icon">
           </button>
         </li>
       </ul>
@@ -61,7 +61,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Delete task icon">
           </button>
         </li>
       </ul>
