--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
     <link 
       href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
@@ -15,57 +17,73 @@
     >
   </head>
   <body class="page">
-    <div class="matrix">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix diagram showing task prioritization">
-      <a 
-        class="info-link" 
-        href="https://goal-life.com/page/method/matrix-eisenhower"
-      >
-        Want more details?
-      </a>
-    </div>
-    <div class="task-list">
-      <p id="task-input-section">
-        <label for="new-task">Add Item</label>
-        <div class="task-input-row">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
-        </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Delete task icon">
-          </button>
-        </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Delete task icon">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Delete task icon">
-          </button>
-        </li>
-      </ul>
-    </div>
+    <header class="header">
+      <h1>Todo Application</h1>
+    </header>
+    
+    <main class="main-content">
+      <section class="matrix">
+        <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix diagram showing task prioritization">
+        <a 
+          class="info-link" 
+          href="https://goal-life.com/page/method/matrix-eisenhower"
+        >
+          Want more details?
+        </a>
+      </section>
+
+      <section class="task-list">
+        <h2 class="hidden">Task Management</h2>
+        <p id="task-input-section">
+          <label for="new-task">Add Item</label>
+          <div class="task-input-row">
+            <input id="new-task" class="task" type="text">
+            <button>Add</button>
+          </div>
+        </p>
+
+        <h3>Todo</h3>
+        <ul id="incompleteTasks">
+          <li>
+            <input type="checkbox">
+            <label class="task">Pay Bills</label>
+            <input type="text" class="task">
+            <button class="edit">Edit</button>
+            <button class="delete">
+              <img src="./remove.svg" alt="Delete task icon">
+            </button>
+          </li>
+          <li class="edit-mode">
+            <input type="checkbox">
+            <label class="task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task">
+            <button class="edit">Save</button>
+            <button class="delete">
+              <img src="./remove.svg" alt="Delete task icon">
+            </button>
+          </li>
+        </ul>
+
+        <h3>Completed</h3>
+        <ul id="completed-tasks">
+          <li>
+            <input type="checkbox" checked>
+            <label class="task">See the Doctor</label>
+            <input type="text" class="task">
+            <button class="edit">Edit</button>
+            <button class="delete">
+              <img src="./remove.svg" alt="Delete task icon">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!-- Footer section -->
+    <footer class="footer">
+      <p>2024 Todo App. All rights reserved.</p>
+    </footer>
+
     <script src="app.js"></script>
   </body>
 </html>
